--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Playfair Display", serif;
 }
 body{
   background-color: #bbc6fa;
@@ -67,7 +68,7 @@ body{
   display: flex;
   justify-content: center;
 }
-.quote-box button{
+.quote-box div button{
   background: rgb(23,12,229);
   color:#fff;
   border-radius: 25px;
@@ -79,4 +80,16 @@ body{
   justify-content: center;
   margin: 5px;
   cursor: pointer;
+}
+.quote-box button img {
+  width: 20px;
+  margin-right: 10px;
+}
+.quote-box button:nth-child(2){
+  background: transparent;
+  color: #333;
+}
+.quote-box button i{
+  color: rgb(23,124,229);
+  
 }
